--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Main-page</title>
   </head>
 
@@ -12,72 +35,76 @@
     <header>
       <!-- Navigation -->
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="./index.html" class="header-logo"
+          ><span class="header-logo-accent">Web</span>Studio</a
+        >
+        <!-- Menu -->
+        <ul class="menu">
+          <li><a href="" class="menu-item-link">Studio</a></li>
+          <li><a href="" class="menu-item-link">Portfolio</a></li>
+          <li><a href="" class="menu-item-link">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- Contacts -->
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="contacts">
+          <li><a href="mailto:info@devstudio.com" class = "contact-email-link">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="contact-phone-link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
 
     <!-- Main content -->
     <main>
-      <!-- Section - Hero -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- Section - About -->
+      <section class="section-about">
+        <h1 class="section-about-header">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="button-order">Order Service</button>
       </section>
 
-      <!-- Section About -->
-      <section>
-        <h2>Section About</h2>
+      <!-- Section Features -->
+      <section class="section-features">
+        <h2 class="hidden-text">Section 2</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="feature-title">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="feature-title">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="feature-title">Diligence</h3>
+            <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="feature-title">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-
       <!-- Section Our Team -->
-      <section>
-        <h2>Our Team</h2>
+      <section class="section-team">
+        <h2 class="section-team-header">Our Team</h2>
         <ul>
           <li>
             <img
@@ -86,53 +113,133 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-card-name">Mark Guerrero</h3>
+            <p class="team-card-position">Product Designer</p>
           </li>
 
           <li>
             <img
               src="./images/card-2.jpg"
-              alt="photo of Tom Ford"
+              alt="Photo of Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-card-name">Tom Ford</h3>
+            <p class="team-card-position">Frontend Developer</p>
           </li>
 
           <li>
             <img
               src="./images/card-3.jpg"
-              alt="photo of Camila Garcia"
+              alt="Photo of Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-card-name">Camila Garcia</h3>
+            <p class="team-card-position">Marketing</p>
           </li>
 
           <li>
             <img
               src="./images/card-4.jpg"
-              alt="photo of Daniel Wilson"
+              alt="Photo of Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-card-name">Daniel Wilson</h3>
+            <p class="team-card-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Section Our Portfolio -->
+      <section class="section-portfolio">
+        <h2 class="section-portfolio-header">Our Portfolio</h2>
+        <ul>
+          <!-- Project 1 -->
+          <li>
+            <ul>
+              <li>
+                <img
+                  src="./images/prj-1-1.jpg"
+                  alt="Photo of Banking App project"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-item-name">Banking App</h3>
+                <p class="portfolio-item-type">App</p>
+              </li>
+
+              <li>
+                <img
+                  src="./images/prj-1-2.jpg"
+                  alt="Photo of Cashless Payment project"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-item-name">Cashless Payment</h3>
+                <p class="portfolio-item-type">Marketing</p>
+              </li>
+
+              <li>
+                <img
+                  src="./images/prj-1-3.jpg"
+                  alt="Photo of Camila Garcia project"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-item-name">Meditaion App</h3>
+                <p class="portfolio-item-type">App</p>
+              </li>
+            </ul>
+          </li>
+          <!-- Project 2 -->
+          <li>
+            <ul>
+              <li>
+                <img
+                  src="./images/prj-2-1.jpg"
+                  alt="Photo of Taxi Service project"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-item-name">Taxi Service</h3>
+                <p class="portfolio-item-type">Marketing</p>
+              </li>
+
+              <li>
+                <img
+                  src="./images/prj-2-2.jpg"
+                  alt="Photo of Screen Illustrations project"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-item-name">Screen Illustrations</h3>
+                <p class="portfolio-item-type">Design</p>
+              </li>
+
+              <li>
+                <img
+                  src="./images/prj-2-3.jpg"
+                  alt="Photo of Online Courses project"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-item-name">Online Courses</h3>
+                <p class="portfolio-item-type">Marketing</p>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
     </main>
-
     <!-- Footer -->
     <footer>
       <!-- Logo      -->
-      <a href="./index.html">WebStudio</a>
-
+      <a href="./index.html" class="footer-logo"
+        ><span class="footer-logo-accent">Web</span>Studio</a
+      >
       <!-- Footer text -->
-      <p>
+      <p class="footer-logo-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
