--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <!-- Navigation -->
       <nav>
         <a href="./index.html" class="header-logo"
-          ><span class="header-logo-accent">Web</span>Studio</a
+          >Web<span class="header-logo-accent">Studio</span></a
         >
         <!-- Menu -->
         <ul class="menu">
@@ -49,8 +49,16 @@
       <!-- Contacts -->
       <address>
         <ul class="contacts">
-          <li><a href="mailto:info@devstudio.com" class = "contact-email-link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="contact-phone-link">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="contact-email-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="contact-phone-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -67,7 +75,7 @@
 
       <!-- Section Features -->
       <section class="section-features">
-        <h2 class="hidden-text">Section 2</h2>
+        <h2 class="visually-hidden">Section 2</h2>
         <ul>
           <li>
             <h3 class="feature-title">Strategy</h3>
@@ -102,6 +110,7 @@
           </li>
         </ul>
       </section>
+
       <!-- Section Our Team -->
       <section class="section-team">
         <h2 class="section-team-header">Our Team</h2>
@@ -151,83 +160,75 @@
           </li>
         </ul>
       </section>
+
       <!-- Section Our Portfolio -->
       <section class="section-portfolio">
         <h2 class="section-portfolio-header">Our Portfolio</h2>
         <ul>
-          <!-- Project 1 -->
           <li>
-            <ul>
-              <li>
-                <img
-                  src="./images/prj-1-1.jpg"
-                  alt="Photo of Banking App project"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-item-name">Banking App</h3>
-                <p class="portfolio-item-type">App</p>
-              </li>
-
-              <li>
-                <img
-                  src="./images/prj-1-2.jpg"
-                  alt="Photo of Cashless Payment project"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-item-name">Cashless Payment</h3>
-                <p class="portfolio-item-type">Marketing</p>
-              </li>
-
-              <li>
-                <img
-                  src="./images/prj-1-3.jpg"
-                  alt="Photo of Camila Garcia project"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-item-name">Meditaion App</h3>
-                <p class="portfolio-item-type">App</p>
-              </li>
-            </ul>
+            <img
+              src="./images/prj-1-1.jpg"
+              alt="Photo of Banking App project"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-item-name">Banking App</h3>
+            <p class="portfolio-item-type">App</p>
           </li>
-          <!-- Project 2 -->
+
           <li>
-            <ul>
-              <li>
-                <img
-                  src="./images/prj-2-1.jpg"
-                  alt="Photo of Taxi Service project"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-item-name">Taxi Service</h3>
-                <p class="portfolio-item-type">Marketing</p>
-              </li>
+            <img
+              src="./images/prj-1-2.jpg"
+              alt="Photo of Cashless Payment project"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-item-name">Cashless Payment</h3>
+            <p class="portfolio-item-type">Marketing</p>
+          </li>
 
-              <li>
-                <img
-                  src="./images/prj-2-2.jpg"
-                  alt="Photo of Screen Illustrations project"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-item-name">Screen Illustrations</h3>
-                <p class="portfolio-item-type">Design</p>
-              </li>
+          <li>
+            <img
+              src="./images/prj-1-3.jpg"
+              alt="Photo of Camila Garcia project"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-item-name">Meditaion App</h3>
+            <p class="portfolio-item-type">App</p>
+          </li>
 
-              <li>
-                <img
-                  src="./images/prj-2-3.jpg"
-                  alt="Photo of Online Courses project"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-item-name">Online Courses</h3>
-                <p class="portfolio-item-type">Marketing</p>
-              </li>
-            </ul>
+          <li>
+            <img
+              src="./images/prj-2-1.jpg"
+              alt="Photo of Taxi Service project"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-item-name">Taxi Service</h3>
+            <p class="portfolio-item-type">Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/prj-2-2.jpg"
+              alt="Photo of Screen Illustrations project"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-item-name">Screen Illustrations</h3>
+            <p class="portfolio-item-type">Design</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/prj-2-3.jpg"
+              alt="Photo of Online Courses project"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-item-name">Online Courses</h3>
+            <p class="portfolio-item-type">Marketing</p>
           </li>
         </ul>
       </section>
@@ -236,7 +237,7 @@
     <footer>
       <!-- Logo      -->
       <a href="./index.html" class="footer-logo"
-        ><span class="footer-logo-accent">Web</span>Studio</a
+        >Web<span class="footer-logo-accent">Studio</span></a
       >
       <!-- Footer text -->
       <p class="footer-logo-text">
