--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <body>
     <!-- Header -->
-    <header>
+    <header class="header-page">
       <!-- Navigation -->
       <nav>
         <a href="./index.html" class="header-logo"
@@ -42,14 +42,14 @@
         >
         <!-- Menu -->
         <ul class="menu">
-          <li><a href="" class="menu-item-link">Studio</a></li>
+          <li><a href="./index.html" class="menu-item-link">Studio</a></li>
           <li><a href="" class="menu-item-link">Portfolio</a></li>
           <li><a href="" class="menu-item-link">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- Contacts -->
-      <address>
+      <address class="header-address">
         <ul class="contacts">
           <li>
             <a href="mailto:info@devstudio.com" class="contact-email-link"
@@ -117,7 +117,7 @@
       <section class="section-team">
         <h2 class="section-team-header">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-card">
             <img
               src="./images/card-1.jpg"
               alt="Photo of Mark Guerrero"
@@ -128,7 +128,7 @@
             <p class="team-card-position">Product Designer</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img
               src="./images/card-2.jpg"
               alt="Photo of Tom Ford"
@@ -139,7 +139,7 @@
             <p class="team-card-position">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img
               src="./images/card-3.jpg"
               alt="Photo of Camila Garcia"
@@ -150,7 +150,7 @@
             <p class="team-card-position">Marketing</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img
               src="./images/card-4.jpg"
               alt="Photo of Daniel Wilson"
@@ -196,7 +196,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-item-name">Meditaion App</h3>
+            <h3 class="portfolio-item-name">Meditation App</h3>
             <p class="portfolio-item-type">App</p>
           </li>
 
@@ -236,7 +236,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer-page">
       <!-- Logo      -->
       <a href="./index.html" class="footer-logo"
         >Web<span class="footer-logo-accent">Studio</span></a
