--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       <address class="header-address">
         <ul class="contacts">
           <li>
-            <a href="mailto:info@devstudio.com" class="contact-email-link"
+            <a href="mailto:info@devstudio.com" class="contact-link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contact-phone-link"
+            <a href="tel:+110001111111" class="contact-link"
               >+11 (000) 111-11-11</a
             >
           </li>
