--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1 class="section-about-header">
           Effective Solutions for Your Business
         </h1>
-        <button type="button" class="button-order">Order Service</button>
+        <button type="button" class="button-service">Order Service</button>
       </section>
 
       <!-- Section Features -->
@@ -125,7 +125,7 @@
               height="260"
             />
             <h3 class="team-card-name">Mark Guerrero</h3>
-            <p class="team-card-position">Product Designer</p>
+            <p class="team-card-type">Product Designer</p>
           </li>
 
           <li class="team-card">
@@ -136,7 +136,7 @@
               height="260"
             />
             <h3 class="team-card-name">Tom Ford</h3>
-            <p class="team-card-position">Frontend Developer</p>
+            <p class="team-card-type">Frontend Developer</p>
           </li>
 
           <li class="team-card">
@@ -147,7 +147,7 @@
               height="260"
             />
             <h3 class="team-card-name">Camila Garcia</h3>
-            <p class="team-card-position">Marketing</p>
+            <p class="team-card-type">Marketing</p>
           </li>
 
           <li class="team-card">
@@ -158,7 +158,7 @@
               height="260"
             />
             <h3 class="team-card-name">Daniel Wilson</h3>
-            <p class="team-card-position">UI Designer</p>
+            <p class="team-card-type">UI Designer</p>
           </li>
         </ul>
       </section>
